feature: [게시글 상세 조회] 게시글 및 판매자 정보 조회 API (#75)
* feat: ArticleController test 추가
- showAritcle() mockMVC 이용해서 구현

* feat:ArticleViewService 만드는중

* feat:ArticleViewServiceTest 구현

* feat: ArticleAcceptence test 구현
- 게시글 상세 조회

* refactor: Dto 생성자 private으로 변경